fixed editor overflows when too many tabs are open

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app {
   display: grid;
-  grid-template-columns: 296px 12px auto;
+  grid-template-columns: 296px 12px calc(100vw - 308px);
   grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
